--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>spammy.permission.site</title>
+  <title>abusive.permission.site</title>
   <link rel="stylesheet" href="style.css">
   <script src="index.js"></script>
 </head>
 <body>
   <div class="content">
-    This is a testing domain that is classified by the on-demand Safe Browsing check as one that is known to send unsolicited notification permission requests.
+    Testing site classified as one that is known to mislead users into accepting the notification permission.
   </div>
   <div class="content">
     <button id="notifications">Notifications</button>
