--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>abusive.permission.site</title>
+  <title>pubcheckertest9.com</title>
   <link rel="stylesheet" href="style.css">
   <script src="index.js"></script>
 </head>
